Fixed text on mobile donate page

--- a/app/assets/stylesheets/mobile/_donate.sass
+++ b/app/assets/stylesheets/mobile/_donate.sass
@@ -41,6 +41,9 @@
       &:hover
         text-decoration: underline
 
+  p.narrow
+    width: auto
+
 #main article.donate
   .float_left
     float: none !important
